// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshots changes className 1`] = `
<DocumentFragment>
  <button
    aria-label=""
    class="aje-btn--secondary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots loading completed state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="aje-spinner"
    >
      <span />
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots loading state 1`] = `
<DocumentFragment>
  <button
    aria-label="loading"
    class="aje-btn--primary is-loading"
    type="button"
  >
    <div
      class="aje-spinner"
    >
      <svg
        class="circular-loader"
        data-testid="spinner-svg"
        viewBox="25 25 50 50"
      >
        <circle
          class="loader-path"
          cx="50"
          cy="50"
          fill="none"
          r="20"
        />
      </svg>
    </div>
    Click Me
  </button>
</DocumentFragment>
`;

exports[`matches snapshots normal display 1`] = `
<DocumentFragment>
  <button
    aria-label=""
    class="aje-btn--primary"
    type="button"
  >
    Click Me
  </button>
</DocumentFragment>
`;
